Fix visibility bug in layout buttons svg

--- a/building.smylingsas.net/assets/css/components/_button-icons.scss
+++ b/building.smylingsas.net/assets/css/components/_button-icons.scss
@@ -36,6 +36,10 @@
     border: 1px solid var(--border-color);
     border-radius: var(--default-border-radius);
     cursor: pointer;
+
+    path {
+        fill: unset;
+    }
 }
 
 
